Fixed spacing of footers

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -255,7 +255,7 @@ h3, h4, h5, li, p {
 .projects-carousel {
   background: linear-gradient(#43A6DE, #1D6891);
   height: 100%;
-  padding: 1rem 0;
+  padding: 2rem 0;
   position: relative;
   text-align: center;
   width: 100%;
