--- a/styles/style.css
+++ b/styles/style.css
@@ -164,12 +164,11 @@ nav li {
   nav ul.opened {
     background: linear-gradient(to bottom right, rgba(51,51,51,0.8),rgba(51,51,51,1));
     display: block;
-    height: 110px;
+    height: 150px;
     position: absolute;
     text-align: center;
     top: 70px;
     width: 90%;
-
   }
 
   .nav-menu a {
@@ -307,26 +306,34 @@ footer {
 }
 
 /* my process */
-
-.my-process h3, .my-process h5 {
-  margin: 2rem auto;
+.my-process h3 {
+  margin: 1.75rem auto 1rem;
   text-align: center;
 }
 
-.process > div img {
+.my-process h5 {
+  height: 32px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.my-process {
+  margin: 1rem auto;
+}
+
+.my-process img {
   display: block;
-  height: 96px;
   margin: 1rem auto;
   width: 96px;
 }
 
-.process > div p {
-  margin: 1rem auto;
+.my-process p {
+  margin: 0 auto;
   max-width: 400px;
   text-align: center;
 }
 
-.process {
+/* .process {
   display: grid;
   grid-auto-rows: minmax(100px, auto);
   grid-gap: 1rem;
@@ -335,6 +342,16 @@ footer {
   "design-feedback design-feedback design-feedback design-code design-code design-code";
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   margin: 1rem;
+} */
+
+.process {
+  display: grid;
+  grid-auto-rows: minmax(100px, auto);
+  grid-gap: 1rem;
+  grid-template-areas:
+  "listen research user-determination design-feedback design-code";
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  margin: 1rem auto 2rem;
 }
 
 .listen {
@@ -364,7 +381,12 @@ footer {
     "design-feedback"
     "design-code";
     grid-template-columns: 1fr;
-    margin: 0 auto;
+    margin: 1rem auto;
+    padding-bottom: 1rem;
+  }
+
+  .my-process h5 {
+    height: inherit;
   }
 }
 
@@ -389,6 +411,7 @@ footer {
   font-size: 1.5rem;
   font-weight: 400;
   line-height: 1.5rem;
+  margin-top: 2rem;
   max-width: 80%;
 }
 
@@ -402,7 +425,7 @@ footer {
 
 .contact-footer .btn {
   display: block;
-  margin: 1rem auto;
+  margin: 1rem auto 2rem;
 }
 
 /*** contact page styling ***/
